# MD-ML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dummy.cpp  party0.cpp  party1.cpp  party2.cpp  test.cpp
experiments/: CMakeLists.txt
experiments/AlexNet-ImageNet/: AlexNetConfig.h  AlexNetFakeOffline.cpp  AlexNetParty0.cpp  AlexNetParty1.cpp  CMakeLists.txt
experiments/dot-product/: CMakeLists.txt  dot_product_config.h  dot_product_fake_offline.cpp  dot_product_party_0.cpp  dot_product_party_1.cpp
experiments/test/: CMakeLists.txt  test_fake_offline.cpp  test_party_0.cpp  test_party_1.cpp
src/fake-offline/: FakeAddConstantGate.h  FakeAddGate.h  FakeAvgPool2DGate.h  FakeCircuit.h  FakeConv2DGate.h  FakeConv2DTruncGate.h  FakeElemMultiplyGate.h  FakeGate.h  FakeGtzGate.h  FakeInputGate.h  FakeMultiplyGate.h  FakeMultiplyTruncGate.h  FakeOutputGate.h  FakeParty.h  FakeReLUGate.h  FakeSubtractGate.h
src/networking/: CMakeLists.txt  Party.cpp  Party.h
src/protocols/: AddConstantGate.h  AddGate.h  AvgPool2DGate.h  Circuit.h  Conv2DGate.h  Conv2DTruncGate.h  ElemMultiplyGate.h  Gate.h  GtzGate.h  InputGate.h  MultiplyGate.h  MultiplyTruncGate.h  OutputGate.h  PartyWithFakeOffline.h  ReLUGate.h  SubtractGate.h
src/share/: IsSpdz2kShare.h  Mod2PowN.h  Spdz2kShare.h
src/utils/: Timer.cpp  Timer.h  fixed_point.h  linear_algebra.h  print_vector.h  rand.h  tensor.h  uint128_io.h
